--- a/index.html
+++ b/index.html
@@ -171,27 +171,28 @@
 
   <body class="v_dark" data-spy="scroll" data-offset="110">
     <!-- START Bnner -->
-   
-  <div class="flexBanner">
-    <div class="mobile-banner-text redHatFont fnt_wgt_500 flexT">
-      <div>
-        <img src="assets/images/stars.svg" alt="star" class="mr-1 notMobileDevice" />
-        <span class="whitespace-nowrap bckgrnd_img_card_fnt mobile-banner-text text-wrap txtBlack ban" style="">
-          Rivera Pre-Mine program is Live Now.
-          <span class="ml-05 txtBlack">
-            <a href="https://medium.com/rivera-money/rivera-voyage-kicked-off-with-pre-mined-riv-tokens-2073687d5c0b" target="_blank" rel="noreferrer" class="bckgrnd_img_card_fnt whitespace-nowrap custom-link">
-              Learn More
-            </a>
-            <span class="crsr_pntr mobileDevice p-1 fnt_wgt_800 txtBlack" onclick="handleCloseBanner()">&times;</span>
-            <img src="assets/images/stars.svg" alt="star" class="notMobileDevice" />
+  
+    <div class="flexBanner">
+      <div class="mobile-banner-text redHatFont fnt_wgt_500 flexT">
+        <div>
+          <img src="assets/images/stars.svg" alt="star" class="mr-1 notMobileDevice" />
+          <span class="whitespace-nowrap bckgrnd_img_card_fnt mobile-banner-text text-wrap txtBlack ban" style="">
+            Rivera Pre-Mine program is Live Now.
+            <span class="ml-05 txtBlack">
+              <a href="https://medium.com/rivera-money/rivera-voyage-kicked-off-with-pre-mined-riv-tokens-2073687d5c0b" target="_blank" rel="noreferrer" class="bckgrnd_img_card_fnt whitespace-nowrap custom-link ban">
+                Learn More
+              </a>
+              <!-- <span class="crsr_pntr mobileDevice p-1 fnt_wgt_800 txtBlack" onclick="handleCloseBanner()">&times;</span> -->
+              <img src="assets/images/stars.svg" alt="star" class="notMobileDevice" />
+            </span>
           </span>
-        </span>
+        </div>
       </div>
     </div>
-  </div>
+   
     <!-- END LOADER -->
 
-    <!-- START HEADER -->
+  
      <!-- START HEADER -->
 <header class="header_wrap fixed-top nav-fixed">
   <div class="custom-container">
@@ -435,7 +436,7 @@
                           <div class="news_update_header_font">RIV Tokenomics — Introduction, </br> Utility & Allocation</div>
                           <div class="explore_more_pos">
                             <div><img src="/assets/images/arrow.svg" /></div>
-                            <div><img src="/assets/images/blognew2.png" class="height_120" /></div>
+                            <div><img src="/assets/images/Group 1080.png" class="height_120" /></div>
                           </div>
                         </a>
                         <a href="https://medium.com/rivera-money/rivera-money-expands-to-coredao-a-new-era-for-defi-ca20982ada11" target="_blank" class="swiper-slide explore_cards-each text-dark">
@@ -443,6 +444,21 @@
                           <div class="explore_more_pos">
                             <div><img src="/assets/images/arrow.svg" /></div>
                             <div><img src="/assets/images/image 608 (Traced).png" class="height_120" /></div>
+                          </div>
+                        </a>
+                        <a href="https://medium.com/rivera-money/announcing-partnership-rivera-money-x-stratovm-09811160a52a?source=collection_home---4------0-----------------------" target="_blank" class="swiper-slide explore_cards-each text-dark">
+                          <div class="news_update_header_font">Announcing Partnership:</br>Rivera Money x StratoVM</div>
+                          <div class="explore_more_pos">
+                            <div><img src="/assets/images/arrow.svg" /></div>
+                            <div><img src="/assets/images/Group 1090.png" class="height_120" /></div>
+                          </div>
+                        </a>
+                        <a href="
+                        https://medium.com/rivera-money/rivera-money-partners-with-b%C2%B2-network-a-new-era-for-bitcoin-and-defi-48d3a1d01715" target="_blank" class="swiper-slide explore_cards-each text-dark">
+                          <div class="news_update_header_font">Rivera Money Partners with </br> B² Network</div>
+                          <div class="explore_more_pos">
+                            <div><img src="/assets/images/arrow.svg" /></div>
+                            <div><img src="/assets/images/Group 1093.png" class="height_120" /></div>
                           </div>
                         </a>
                           <!-- <a href="https://medium.com/rivera-money/rivera-liquidity-infrastructure-for-mantle-ab44ef2f39dc" target="_blank" class="swiper-slide explore_cards-each text-dark">
@@ -699,6 +715,7 @@
           <h1 class="section-header " style="font-weight: bold; font-size: 32px;">Trusted by leading Blockchain Networks and DeFi Protocols</h1>
           
           <div class="partners-grid">
+            <div class="grid-row">
             <div class="partner-item"><img src="/assets/images/Group 1081.png" alt="Partner"></div>
             <div class="partner-item"><img src="/assets/images/mantlev2.svg" alt="Mantle"></div>
             <div class="partner-item"><img src="/assets/images/Group 1086.png" alt="BSQ"></div>
@@ -715,8 +732,11 @@
             <div class="partner-item"><img src="/assets/images/swapsicle.png" alt="Swapsicle"></div>
             <div class="partner-item"><img src="/assets/images/proxyswapp.png" alt="Proxyswap"></div>
             <div class="partner-item"><img src="/assets/images/aperture.png" alt="Aperture"></div>
+            <div class="partner-item" ><img src="/assets/images/ICECREAMSWAP (1).png" alt="Icexream" ></div>
+            
             <!-- Add more partner-item divs as needed -->
           </div>
+        </div>
         </div>
       </section>
       <!-- END SECTION SERVICES -->
@@ -724,7 +744,7 @@
 
     <!-- START FOOTER SECTION -->
     <footer>
-      <div class="top_footer bg_light_dark">
+      <div class="top_footer bg_light_dark" >
         <div class="custom-container-footer">
           <div class="text-center contct_btn" style="margin-bottom: 40px;">
             <img src="/assets/images/contactv2.png" class="cntc_wdth">
