new update fixes

--- a/index.html
+++ b/index.html
@@ -433,14 +433,14 @@
                           <div class="news_update_header_font">Rivera Voyage Kicked Off  </br> with Pre-Mined RIV Tokens   </div>
                           <div class="explore_more_pos">
                             <div><img src="/assets/images/arrow.svg" /></div>
-                            <div><img src="/assets/images/blogAI.svg" class="height_120" /></div>
+                            <div><img src="/assets/images/boat1.png" class="height_120" /></div>
                           </div>
                         </a>
                         <a href="https://medium.com/rivera-money/rivera-quant-structured-products-built-on-concentrated-liquidity-f3b4656fad2d" target="_blank" class="swiper-slide explore_cards-each text-dark">
                           <div class="news_update_header_font">Rivera Quant: Structured Products</br> built on Concentrated Liquidity</br> </div>
-                          <div class="explore_more_pos">
+                          <div class="explore_more_pos height_120">
                             <div><img src="/assets/images/arrow.svg" /></div>
-                            <div><img src="/assets/images/blogAI.svg" class="height_120" /></div>
+                            <div><img src="/assets/images/QUANT.png" class="mt-5" /></div>
                           </div>
                         </a>
                         <!-- <a href="https://medium.com/rivera-money/announcing-riv-governance-token-for-rivera-protocol-640ad617d4c5" target="_blank" class="swiper-slide explore_cards-each text-dark">
@@ -741,7 +741,7 @@
             <div class="partner-item"><img src="/assets/images/glowswap (4).png" alt="Glowswap"></div>
             <div class="partner-item"><img src="/assets/images/agni.png" alt="Agni"></div>
             <div class="partner-item"><img src="/assets/images/coreX (2).png" alt="CoreX"></div>
-            <div class="partner-item"><img src="/assets/images/swapsicle.png" alt="Swapsicle"></div>
+            <div class="partner-itemm"><img src="/assets/images/swapsicle.png" alt="Swapsicle"></div>
             <div class="partner-small"><img src="/assets/images/proxyswapp.png" alt="Proxyswap"></div>
             <div class="partner-small"><img src="/assets/images/aperture.png" alt="Aperture"></div>
             <div class="partner-small" ><img src="/assets/images/ICECREAMSWAP (1).png" alt="Icexream" ></div>
