--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
                     </div>
                    
                   </div>
-                  <div class="mt-5 mb-0">Backed By</div>
+                  <div class="mt-5 mb-0">Grants By</div>
                   <div class=" tvl_flex1 pb-3 mt-2">
                     <div class="tvl_bg1">
                       <img src="/assets/images/uniswap.svg" alt="">
